#VERSION 0.9.5#
  
 - fixed method addAction() in Peak_Codegen_Controller to discard empty action name
 - changed the path of internal module in Peak_Application_Modules
 - added bind param to method query() in Peak_Model_Zendatable
 - added a new param method to model() from Peak_Controller_Action to allow injection of param(s) into the model constructor
 - added better zend_db profiler infos in Peak_View_Helper_Debugbar + minor css change in debugbar.css
 - added few enhancements in debugbar.js and debugbar.css
 - fixed some js functions to use properly window size for panels in debugbar.js
 - removed deprecated file appcreate.php
 - removed vendor Geshi
 - updated css twitter bootstrap in Peak_Controller_Internal_Pkdoc and Peak_Controller_Internal_Pkwelcome
 - updated vendor twitter bootstrap to 2.2.1 and remove version folder to avoid changing integration url each time
 - fixed a bug in Peak_Controller_Internal_Pkdoc introduced by changes of Peak_View_Render_VirtualLayouts in previous version

#VERSION 0.9.4#

 - added method cleanUnknownVars() and property $_clean_all_unknown_vars in Peak_View_Render_VirtualLayouts
 - modified method initConfig in Peak_Core to support absent or unsupported application config by using genericapp.ini 
   only in development env
 - enhanced Peak_Controller_Internal_Pkwelcome functionality and content
 - added a quick variables template system for Peak_View_Render_VirtualLayouts by adding method _processVariables()
   and by modifying method render()
 - remodified the recent change about an exception throw in Peak_Core::initConfig(), by enable it again only if 
   app environment is not development
 - marked as deprecated property $_extensions, methods __call() and ext() from class Peak_Core
 - added class Peak_Controller_Internal_Pkwelcome. This new controller is used by default in genericapp.ini
 - added file genericapp.ini in Peak/Application