@@ -5,7 +5,7 @@ php.date.timezone          = "America/Montreal"
 
 front.allow_internal_controllers = 1
 front.default_controller = "index"
-front.error_controller   = "error"
+front.error_controller   = "pkerror"
 
 view.engine    = "Layouts"
 view.useLayout = "homepage"
